# poetics-sdk

./: Makefile  README.md  go.mod  go.sum  rest.spec.json
.devcontainer/: devcontainer.json
cpp/: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.ja.md  README.md  copy_lib.ps1  launch_devtools_x64.bat  launch_devtools_x86.bat  vcpkg.json
cpp/.github/workflows/: hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml
cpp/docs/en-US/: API.md  BUILD.md
cpp/docs/ja-JP/: API.md  BUILD.md
cpp/img/: class_diagram.puml
cpp/src/example_streaming/: CMakeLists.txt  main.cpp
cpp/src/example_streaming/poetics/: poetics-sdk.h
cpp/src/poetics-sdk/: CMakeLists.txt  poetics.cpp  poetics.h
cpp/src/poetics-sdk/header/: poetics_error.h
cpp/src/poetics-sdk/header/streaming/: streaming_client.h
cpp/src/poetics-sdk/header/streaming/asr_job/: stream_asr_job.h
cpp/src/poetics-sdk/header/streaming/asr_job/core/: options.h  stream_asr_job_core.h  stream_asr_job_detail.h
cpp/src/poetics-sdk/include/: poetics.h
cpp/src/poetics-sdk/source/: poetics.cpp
cpp/src/poetics-sdk/source/streaming/: streaming_client.cpp
cpp/src/poetics-sdk/source/streaming/asr_job/: stream_asr_job.cpp
cpp/src/poetics-sdk/streaming/: streaming_client.cpp  streaming_client.h
cpp/src/poetics-sdk/streaming/asr_job/: stream_asr_job.cpp  stream_asr_job.h
cpp/src/poetics-sdk/streaming/asr_job/core/: connection.hpp  stream_asr_job_core.cpp  stream_asr_job_core.h  stream_asr_job_detail.hpp  utterance.h
cpp/src/poetics-sdk/streaming/asr_job/incoming_message/: audio_fragment_submission_progress_message.hpp  error_message.hpp  job_detail_message.hpp  job_status_updated_message.hpp  temporary_utterance_message.hpp  utterance_message.hpp
cpp/src/poetics-sdk/streaming/asr_job/outgoing_message/: create_stream_asr_job_message.hpp
cpp/src/poetics-sdk/streaming/audio_buffer/: audio_buffer.cpp  audio_buffer.h  audio_buffer.hpp
cpp/src/poetics-sdk/streaming/websocket_connection/: websocket_connection.cpp  websocket_connection.h
cpp/src/poetics_example/: CMakeLists.txt  main.cpp  main.h
cpp/src/poetics_sdk/: CMakeLists.txt
cpp/src/poetics_sdk/include/: api_definition.h  stream_asr_job.h  stream_asr_job_listener.h  streaming_client.h
cpp/src/poetics_sdk/streaming/: streaming_client.cpp
cpp/src/poetics_sdk/streaming/asr_job/: stream_asr_job.cpp
cpp/src/poetics_sdk/streaming/asr_job/core/: audio_buffer_state.cpp  audio_buffer_state.h  stream_asr_job_core.cpp  stream_asr_job_core.h
cpp/src/poetics_sdk/streaming/asr_job/incoming_message/: audio_fragment_submission_progress_message.cpp  audio_fragment_submission_progress_message.h  error_message.cpp  error_message.h  job_detail_message.cpp  job_detail_message.h  job_status_updated_message.cpp  job_status_updated_message.h  temporary_utterance_message.cpp  utterance_message.cpp  utterance_message.h
cpp/src/poetics_sdk/streaming/asr_job/outgoing_message/: close_stream_asr_job_message.cpp  close_stream_asr_job_message.h  create_stream_asr_job_message.h  submit_audio_fragment_message.cpp  submit_audio_fragment_message.h
cpp/src/poetics_sdk/streaming/audio_buffer/: audio_buffer.cpp  audio_buffer.h
cpp/src/poetics_sdk/streaming/util/: thread_safe_queue.h
cpp/src/poetics_standalone/: CMakeLists.txt  main.cpp  main.h
cpp/src/poetics_standalone/poetics_sdk/: poetics_error.h
cpp/src/poetics_standalone/poetics_sdk/include/: stream_asr_job_listener.h  streaming_client.h
cpp/src/poetics_standalone/poetics_sdk/streaming/asr_job/incoming_message/: job_status_updated_message.cpp  temporary_utterance_message.h
cpp/src/poetics_standalone/poetics_sdk/streaming/asr_job/outgoing_message/: create_stream_asr_job_message.cpp
cpp/src/poetics_standalone/poetics_sdk/streaming/audio_buffer/: audio_buffer.cpp  audio_buffer.h
cpp/src/poetics_standalone/poetics_sdk/streaming/util/: thread_safe_queue.hpp
cpp/src/poetics_test/: CMakeLists.txt  test.cpp
cpp/test/: CMakeLists.txt  test.cpp
go/: Makefile  README.md  go.mod  go.sum  test.go
go/example/rest/: rest_example.go
go/example/streaming/: streaming_example.go
go/rest/: rest_client.gen.go  rest_client.go  rest_client_test.go
go/streaming/: export.go  stream_asr_job.go  stream_asr_job_detail.go  stream_asr_job_test.go  streaming_client.go  streaming_connection.go  streaming_connection_test.go  temporary_utterance.go  utterance.go  websocket_connection.go  websocket_connection_test.go
go/streaming/internal/audio_buffer/: audio_buffer.go  interface.go
go/streaming/internal/logging/: logger.go  trim.go
go/streaming/internal/stream_asr_job_core/: interface.go  options.go  stream_asr_job_core.go  stream_asr_job_detail.go  temporary_utterance.go  utterance.go
go/streaming/internal/stream_asr_job_incoming_message/: audio_fragment_submission_progress_message.go  error_message.go  job_detail_message.go  job_detail_message_test.go  job_status_updated_message.go  parse.go  temporary_utterance_message.go  utterance_message.go
go/streaming/internal/stream_asr_job_outgoing_message/: close_stream_asr_job_message.go  connect_to_stream_asr_job_message.go  create_stream_asr_job_message.go  submit_audio_fragment_message.go
go/streaming/internal/websocket_connection/: interface.go  websocket_connection.go  websocket_connection_test.go
poetics/: hello.go  rest_client.gen.go  rest_client.go  rest_client_test.go
streaming/internal/audio_buffer/: audio_buffer.go
